--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "commit": "cz"
   },
   "dependencies": {
+    "element-plus": "^2.5.1",
     "pinia": "^2.1.7",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
+    "@typescript-eslint/parser": "^6.18.1",
     "@vitejs/plugin-vue": "^4.5.2",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vue/eslint-config-prettier": "^8.0.0",
@@ -31,6 +33,8 @@
     "husky": "^8.0.3",
     "jsdom": "^23.0.1",
     "prettier": "^3.0.3",
+    "unplugin-auto-import": "^0.17.3",
+    "unplugin-vue-components": "^0.26.0",
     "vite": "^5.0.10",
     "vitest": "^1.0.4"
   },
