--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "commit": "cz"
   },
   "dependencies": {
+    "axios": "^1.6.5",
     "element-plus": "^2.5.1",
     "pinia": "^2.1.7",
     "vue": "^3.3.11",
